fix(auth): background image was stretched out

--- a/src/views/Auth.scss
+++ b/src/views/Auth.scss
@@ -28,6 +28,7 @@
 
   source,
   img {
+    object-fit: cover;
     width: 66vw;
     height: 100vh;
   }
